--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,4 +4,6 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+This page is as lost as my first neural network's gradients.
+
+[Let's get you back on track.](/)
